fix: footer overlaps main-banner

--- a/src/app/_components/footer/footer.component.css
+++ b/src/app/_components/footer/footer.component.css
@@ -13,7 +13,7 @@ button {
 }
 
 #div-foot {
-  height: 50vh;
+  height: 40vh;
 }
 
 #copyright-cell {
